--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
   	<dependency>
   		<groupId>org.bukkit</groupId>
   		<artifactId>craftbukkit</artifactId>
-  		<version>1.6.2-R0.1</version>
+  		<version>1.9.4-R0.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
 </project>
